# ak-translator

./: .gitignore  README.md  package.json
backend/: Dockerfile  Pipfile  main.py  pyproject.toml  requirements.txt
backend/ai_agent/: examples.py  prompts.py  state.py  workflow.py
backend/config/: constants.py  settings.py
backend/core/: exceptions.py
backend/models/: schemas.py
backend/routes/: translation.py
backend/services/: translation_service.py  translator.py  translator_service_inference_api.py  validation_service.py
backend/translator_graph/: chains.py  nodes.py
backend/websocket/: handlers.py  manager.py
frontend/: Dockerfile  package.json
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/components/: Header.tsx  TranslationForm.tsx  TranslationLoading.tsx  TranslationResult.tsx
frontend/src/services/: websocket.ts
