[tool.poetry]
name = "ak-translations-backend"
version = "0.1.0"
description = "AK Translations FastAPI Backend with LangChain and LangGraph"
authors = ["Your Name <your.email@example.com>"]
packages = [
    {include = "ai_agent"}, 
    {include = "config"}, 
    {include = "core"}, 
    {include = "models"}, 
    {include = "routes"}, 
    {include = "services"}, 
    {include = "websocket"}
]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "*"
langchain-ollama = "*"
websockets = "12.0"
fastapi = "0.109.2"
uvicorn = "0.27.1"
requests = "2.32.4"
python-dotenv = "1.0.0"
asyncio = "3.4.3"
ollama = "0.5.1"
httpx = "^0.27.0"
langchain = "*"
langchain-anthropic = "*"
langchain-google-genai = "*"
pydantic-settings = "^2.10.1"
poetry-dotenv-plugin = "^0.2.0"
urllib3 = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.27.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

